Добавлена возможность создания сообщения в чате
