# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\V1\AuthController;
 use App\Http\Controllers\Api\V1\ChatController;
+use App\Http\Controllers\Api\V1\MessageController;
 use App\Http\Controllers\Api\V1\UserController;
 use Illuminate\Support\Facades\Route;
 
@@ -14,7 +15,12 @@ Route::prefix('v1')->group(function () {
     Route::middleware('auth:sanctum')->group(function () {
         //Пользователи
         Route::get('/users', [UserController::class, 'index'])->name('users.index');
-        Route::post('/chats/{userId}', [ChatController::class, 'store'])->whereNumber('userId')->name('chats.store');
+
+        //Чаты
+        Route::post('/chats', [ChatController::class, 'store'])->name('chats.store');
+        Route::post('/chats/{chatId}/messages', [MessageController::class, 'store'])->whereNumber('chatId')->name('messages.store');
+
+
     });
 
 });
